deploy/uat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seo-ops-api
spec:
  selector:
    app.kubernetes.io/name: connexup-seo-ops
    app.kubernetes.io/component: api
  ports:
    - { name: http, port: 8787, targetPort: http }
---
apiVersion: v1
kind: Service
metadata:
  name: seo-ops-frontend
spec:
  selector:
    app.kubernetes.io/name: connexup-seo-ops
    app.kubernetes.io/component: frontend
  ports:
    - { name: http, port: 8080, targetPort: http }
