deploy/uat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seo-ops
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 12m
spec:
  ingressClassName: nginx
  rules:
    - host: seo-ops.connexup-uat.net
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service: { name: seo-ops-api, port: { name: http } }
          - path: /health-check
            pathType: Exact
            backend:
              service: { name: seo-ops-api, port: { name: http } }
          - path: /seo-ops
            pathType: Prefix
            backend:
              service: { name: seo-ops-frontend, port: { name: http } }
  tls:
    - hosts: [seo-ops.connexup-uat.net]
      secretName: seo-ops-uat-tls
